# src/rag_kb/schemas/__init__.py
@@ -13,12 +13,16 @@ from rag_kb.schemas.chat import (
     ChatAnswerCompletedEvent,
     ChatCitationAssetResponse,
     ChatCitationResponse,
+    ChatFinalContextAssetResponse,
+    ChatFinalContextMediaResponse,
+    ChatFinalContextMessageResponse,
     ChatMessagePage,
     ChatMessageResponse,
     ChatRetrievalRequest,
     ChatRunCreate,
     ChatRunErrorResponse,
     ChatRunFailedEvent,
+    ChatRunFinalContextResponse,
     ChatRunResponse,
     ChatRunQueryContextResponse,
     ChatSessionCreate,
@@ -67,12 +71,16 @@ __all__ = [
     "ChatAnswerCompletedEvent",
     "ChatCitationAssetResponse",
     "ChatCitationResponse",
+    "ChatFinalContextAssetResponse",
+    "ChatFinalContextMediaResponse",
+    "ChatFinalContextMessageResponse",
     "ChatMessagePage",
     "ChatMessageResponse",
     "ChatRetrievalRequest",
     "ChatRunCreate",
     "ChatRunErrorResponse",
     "ChatRunFailedEvent",
+    "ChatRunFinalContextResponse",
     "ChatRunResponse",
     "ChatRunQueryContextResponse",
     "ChatSessionCreate",
